--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,25 +1,34 @@
 body {
     background-color: rgb(211, 84, 84);
     color: white;
-    width: 800px;
-
+    padding-left: 150px;
+    padding-right: 150px;
+    padding-top: 30px;
 }
 
 header {
     display: flex;
     justify-content: space-between;
+    background-color: rgb(11, 83, 83);
+    
 }
 
 .logo {
     align-items: flex-start;
+    margin: auto 0px;
 }
 
 .menu {
     display: flex;
     align-content: space-between;
+    margin: auto 0px;
     
 }
 
 button {
     align-content: flex-end;
+    font-size: 18px;
+    background-color: yellow;
+    padding: 15px 30px;
+    border: 0px;
 }
