--- a/assets/css/sections.css
+++ b/assets/css/sections.css
@@ -15,3 +15,9 @@
     letter-spacing: 1px;
     margin-top: -50px;
 }
+
+.partner{
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+}
