--- a/assets/css/sections.css
+++ b/assets/css/sections.css
@@ -17,7 +17,12 @@
 }
 
 .partner{
+    padding: 30px 0px;
     display: flex;
     width: 100%;
     justify-content: space-between;
+}
+
+.section-2{
+
 }
