--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,3 +6,9 @@ body {
     padding-top: 30px;
 }
 
+p {
+    font-size: 20px;
+    line-height: 30px;
+    letter-spacing: 1px;
+    color: #919191;
+}
