--- a/assets/css/sections.css
+++ b/assets/css/sections.css
@@ -27,3 +27,12 @@
     display: flex;
     padding: 30px 0px;
 }
+
+.section-2 p{
+    margin-top: -40px;
+   }
+
+.section-3 {
+    background-color: #32353d;
+    display: flex;
+}
