--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,15 +7,15 @@ body {
 }
 
 p {
+    font-family:Inter;
     font-size: 19px;
     line-height: 30px;
-    letter-spacing: 1px;
     color: #919191;
 }
 
 h3 {
     font-size: 40px;
-    font-family: alga;
+    font-family: prata;
     font-weight: 400;
     /*line-height: 0.2px;*/
 }
