--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -2,7 +2,8 @@ header {
     display: flex;
     justify-content: space-between;
     font-size: 20px;
-    
+    padding-left: 150px;
+    padding-right: 150px;
 }
 
 .logo {
