--- a/assets/css/sections.css
+++ b/assets/css/sections.css
@@ -1,6 +1,8 @@
 .section-1{
     width: 60%;
     padding: 20px 0px;
+    padding-left: 150px;
+    padding-right: 150px;
 }
 
 .section-1 h2{
@@ -16,15 +18,22 @@
 }
 
 .partner{
-    padding: 30px 0px;
+    padding-top: 30px 0px;
     display: flex;
     width: 100%;
     justify-content: space-between;
 }
 
+.partner1 {
+    padding-left: 150px;
+    padding-right: 150px;
+}
+
 .section-2{
     display: flex;
     padding: 30px 0px;
+    padding-left: 150px;
+    padding-right: 150px;
 }
 
 .section-2 p{
@@ -32,6 +41,17 @@
    }
 
 .section-3 {
+    padding-left: 150px;
+    padding-right: 150px;
     background-color: #32353d;
-    display: flex;
+    display: inline-flex;
+    align-items: flex-end;
+}
+
+.sec3l {
+    padding-right: 100px;
+}
+
+.sec3l h3{
+    line-height: 1.5em;
 }
