--- a/assets/css/sections.css
+++ b/assets/css/sections.css
@@ -47,11 +47,23 @@
     display: flex;
 }
 
-/*.sec3l {
-    padding-right: 100px;
+.sec3l {
+    max-width: 700px;
+    width: 100%;
+    margin-right: 150px;
 }
 
-.sec3l h3{
+/*.sec3l h3{
     line-height: -1.5em;
     
 }*/
+
+.sec3r {
+    max-width: 700px;
+    width: 100%;
+}
+
+.section-4 {
+    display: block;
+    padding: 30px 150px 30px;
+}
