--- a/assets/css/sections.css
+++ b/assets/css/sections.css
@@ -18,7 +18,8 @@
 }
 
 .partner{
-    padding-top: 30px 0px;
+    padding-top: 50px;
+    padding-bottom: 50px;
     display: flex;
     width: 100%;
     justify-content: space-between;
@@ -30,8 +31,10 @@
 }
 
 .section-2{
-    display: flex;
-    padding: 30px 0px;
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-gap:  100px;
+    padding: 70px 0px;
     padding-left: 150px;
     padding-right: 150px;
 }
@@ -41,8 +44,7 @@
    }
 
 .section-3 {
-    padding-left: 150px;
-    padding-right: 150px;
+    padding: 50px 150px;
     background-color: #32353d;
     display: flex;
 }
@@ -51,6 +53,7 @@
     max-width: 700px;
     width: 100%;
     margin-right: 150px;
+    margin-top: -20px;
 }
 
 /*.sec3l h3{
@@ -65,5 +68,9 @@
 
 .section-4 {
     display: block;
-    padding: 30px 150px 30px;
+    padding: 50px 150px 100px;
+}
+
+.section-4 h3 {
+    margin-bottom: -0.5em;
 }
